Changelog
=========


1.0.2dev
--------

* CSS fix for title field in checkout wizard
  [lgraf]

* Added some Plone 3 compatibility fixes
  [lgraf]

* Added test dependency on pyquery
  [lgraf]

* Fixed invalid HTML in payment processor widget
  [lgraf]

* Assigned Add Order permission to Manager role in rolemap.xml
  [lgraf]

* Fixed bug where supplier and status filters weren't initialized in OrderManager view
  [lgraf]

* Added column title for vat_amount when exporting CSV
  [lgraf]

* Fixed bug in calculation of VAT amount
  [lgraf]

* Improved display of VAT (MwSt)
  [lgraf]

* Changed default for IShippingAddress.used to False
  [lgraf]

* Made order_review template not require the ``newsletter`` field
  [lgraf]

* Using interfaces instead of portal_type to determine if context has shop items
  [lgraf]

* Fixed type of default values for IShopConfiguration.var_rates
  [lgraf]

* Listing items in ShopCategory based on IShopItem interface, not portal_type
  [lgraf]

* Implemented calculation and display (in order_review) of VAT (MwSt)
  [lgraf]

* Added fields and settings for VAT (MwSt) support
  [lgraf]

* Implemented filtering by status in order_manager
  [lgraf]

* Implemented UI for changing status or deleting several orders at once
  [lgraf]

* Improved UI for cancelling orders in order_manager
  [lgraf]

* Implemented pluggable status sets and option to manually change status of orders
  [lgraf]

* Added option to display cart portlet only if there are items in the current folder / context
  [lgraf]


1.0.1
-----

* Cleaned up translations (fuzzy entries)
  [lgraf]

* Avoid creating a session if there doesn't exist one yet.
  Accessing REQUEST.SESSION causes a _ZopeID cookie to be created, therefore
  we use the browser_id_manager to check first if a session already exists.
  [lgraf]

* Moved translations in plone domain from locales to i18n folder for Plone3 bbb
  [lgraf]

* Made date parsing in order_manager more robust
  [lgraf]
